# mot-app-sigma

./: CMakeLists.txt  config.ini  mot-app.code-workspace
inc/: BYTETracker.h  STrack.h  dataType.h  kalmanFilter.h  lapjv.h
src/: mot-app.cpp
src/image/: image_assist.cpp
src/tracker/: BYTETracker.cpp  STrack.cpp  kalmanFilter.cpp  lapjv.cpp  utils.cpp
